# BSpline

./: CMakeLists.txt  run.sh
src/: BSpline.cc  BSpline.h  main.cc
